Fix bg scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,6 @@ h1 {
 }
 
 body {
-  background-image: url("./assets/imgs/laptop.jpg");
-  background-repeat: repeat;
-  background-size: 200px 200px;
-  background-attachment: fixed;
   font-family: "VT323", monospace;
   letter-spacing: 2px;
   font-size: 20px;
